# Heart_Rate_Temperature_Monitoring

./: CMakeLists.txt  Main.qml  README.md  Resources.qrc  ecgData.cpp  ecgData.h  heartRateDataModel.cpp  heartRateDataModel.h  main.cpp  main.qml  qml.qrc  sensorDataThread.cpp  sensorDataThread.h  temperatureData.cpp  temperatureData.h  temperatureDataModel.cpp  temperatureDataModel.h
module/main_ui/: HeartRateArea.qml  MainScreen.qml  RespRateArea.qml  TemperatureArea.qml
